style: fix that the buttons at the bottom dissapear because they are behind div
Refs: #SFB-3

--- a/app/styles/_shame.scss
+++ b/app/styles/_shame.scss
@@ -51,7 +51,3 @@ code {
 .au-o-grid {
   display: block;
 }
-
-.playground__edit {
-  margin-bottom: 4rem;
- }
