--- a/app/styles/project/_c-playground.scss
+++ b/app/styles/project/_c-playground.scss
@@ -48,3 +48,7 @@
   gap: 1rem;
   margin: 1rem 0;
 }
+
+.au-o-box {
+  margin-bottom: 4rem;
+}
